fixed tooltip overlapping with grid-items

--- a/css/weather.css
+++ b/css/weather.css
@@ -340,6 +340,9 @@ table img {
 .tooltip:hover {
   outline: 1px solid white;
 }
+.tooltip:hover:not(.search) {
+  z-index: 1000000;
+}
 
 /* Content: Keyframes */
 @keyframes upDown {
